major version limit

--- a/renovate.json
+++ b/renovate.json
@@ -4,4 +4,10 @@
     "config:recommended"
   ]
   , "prHourlyLimit": 3
+  , "packageRules": [
+    {
+      "matchUpdateTypes": ["major"],
+      "dependencyDashboardApproval": true
+    }
+  ]
 }
